Added pipeline to show student data.

--- a/Vyomika/templates/Student/bsitstudents.html
+++ b/Vyomika/templates/Student/bsitstudents.html
@@ -8,10 +8,10 @@
     <thead class="bg-light">
         <tr>
             <th>Name</th>
-            <th>Title</th>
-            <th>Status</th>
-            <th>Position</th>
-            <th>Actions</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Faculty</th>
+            <th>Gender</th>
         </tr>
     </thead>
     <tbody>
