--- a/Vyomika/templates/Student/class.html
+++ b/Vyomika/templates/Student/class.html
@@ -7,16 +7,16 @@
     <img src="{% static 'IT.jpg' %}" class="card-img-top" alt="IT" style="height: 20em;">
     <div class="card-body">
         <div class="d-grid gap-2" style="float: center;">
-           <a href="student/"><button class="btn btn-outline-dark" type="button" href="student/">Information Technology</button></a> 
+           <a href="bsitstudents/"><button class="btn btn-outline-dark" type="button">Information Technology</button></a> 
         </div>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
             This content is a little bit longer.</p>
     </div>
-</div>
+</div> 
 <div class="card col-md-6" style="margin-left: auto;">
     <div class="card-body">
         <div class="d-grid gap-2" style="float: center;">
-            <button class="btn btn-outline-dark " type="button">Business Administration</button>
+            <a href="bbastudents/"> <button class="btn btn-outline-dark " type="button">Business Administration</button> </a>
         </div>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
             This content is a little bit longer.</p>
