--- a/Vyomika/templates/Student/bsitstudents.html
+++ b/Vyomika/templates/Student/bsitstudents.html
@@ -15,31 +15,26 @@
         </tr>
     </thead>
     <tbody>
+        {% for std in student %}
         <tr>
             <td>
                 <div class="d-flex align-items-center">
-                    <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px"
+                    <img src="/media/{{std.stdimage}}" alt="" style="width: 45px; height: 45px"
                         class="rounded-circle" />
                     <div class="ms-3">
-                        <p class="fw-bold mb-1">John Doe</p>
-                        <p class="text-muted mb-0">john.doe@gmail.com</p>
+                        <p class="fw-bold mb-1">{{std.stdname}}</p>
+                        <p class="text-muted mb-0">{{std.stdemail}}</p>
                     </div>
                 </div>
             </td>
             <td>
-                <p class="fw-normal mb-1">Software engineer</p>
-                <p class="text-muted mb-0">IT department</p>
+                <p class="fw-normal mb-1">{{std.stdadd}}</p>
             </td>
-            <td>
-                <span class="badge badge-success rounded-pill d-inline">Active</span>
-            </td>
-            <td>Senior</td>
-            <td>
-                <button type="button" class="btn btn-link btn-sm btn-rounded">
-                    Edit
-                </button>
-            </td>
+            <td>{{std.stdphone}}</td>
+            <td>{{std.stdfaculty}}</td>
+            <td>{{std.stdgender}}</td>
         </tr>
+        {% endfor %}
     </tbody>
 </table>
     {% endblock %}
