Added a delete button.

--- a/Vyomika/templates/Student/addstd.html
+++ b/Vyomika/templates/Student/addstd.html
@@ -63,6 +63,6 @@
         <label class="form-check-label" for="gridRadios3"> Choose Image </label>
         <input type="file" name="stdimage" accept="image/*">
     </div>
-    <button type="submit" class="btn btn-primary" >Sign in</button>
+    <button type="submit" class="btn btn-primary" >Add</button>
 </form>
 {% endblock %}
