--- a/Vyomika/templates/Student/bsitstudents.html
+++ b/Vyomika/templates/Student/bsitstudents.html
@@ -19,7 +19,7 @@
         <tr>
             <td>
                 <div class="d-flex align-items-center">
-                    <img src="/media/{{std.stdimage}}" alt="" style="width: 45px; height: 45px"
+                    <img src="/media/{{std.stdimage}}" alt="" style="width: 120px; height: 120px"
                         class="rounded-circle" />
                     <div class="ms-3">
                         <p class="fw-bold mb-1">{{std.stdname}}</p>
@@ -33,8 +33,14 @@
             <td>{{std.stdphone}}</td>
             <td>{{std.stdfaculty}}</td>
             <td>{{std.stdgender}}</td>
+            <td>
+                <form action="{% url 'delete_student' std.std_id %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
-    {% endblock %}
+{% endblock %}
