Added AboutUs Page.

--- a/Vyomika/templates/Home/index.html
+++ b/Vyomika/templates/Home/index.html
@@ -97,9 +97,12 @@ ul {
       <div class="landing-page">
         <div class="content">
           <div class="container">
-            <div class="info">
-              <h1>Looking For Inspiration</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus odit nihil ullam nesciunt quidem iste, Repellendus odit nihil</p>
+            <div class="info col-md-5">
+              <h1>Vyomika: Where Data Soars to New Heights</h1>
+              <p>At Vyomika, we believe that data holds immense potential and is the key to unlocking valuable insights and driving transformative change. Our name reflects our commitment to harnessing the power of data and propelling it to new heights, enabling businesses, organizations, and governments to navigate uncharted territories with confidence.
+                <br>
+                <a href="about/"> Learn More</a>...
+              </p>
               <button>Get Started</button>
             </div>
             <div class="image">
