Added a file upload system.

--- a/Vyomika/templates/Visualize/data.html
+++ b/Vyomika/templates/Visualize/data.html
@@ -30,5 +30,16 @@
         {% endif %}
         
     </div>
+
+    <div class="col-md-12 d-flex justify-content-center">
+        <h1>Want to upload file and Visualize
+        </h1>
+    </div>
+
+    <div class="m-3">
+        <label class="form-check-label" for="gridRadios3"> Choose Image </label>
+        <input type="file" name="stdimage" accept="image/*">
+    </div>
+
 </div>
 {% endblock %}
