--- a/Vyomika/templates/Visualize/data.html
+++ b/Vyomika/templates/Visualize/data.html
@@ -13,12 +13,14 @@
 
             <div class="form-group">
                 <label for="xlabels">Enter the xlabels</label>
-                <input type="text" class="form-control" id="xlabel" name="names" placeholder="Separated by comma" required>
+                <input type="text" class="form-control" id="xlabel" name="names" placeholder="Separated by comma"
+                    required>
             </div>
 
             <div class="form-group">
                 <label for="ylabels">Enter the ylabels </label>
-                <input type="text" class="form-control" id="ylabel" name="data" placeholder="Separated by Comma" required>
+                <input type="text" class="form-control" id="ylabel" name="data" placeholder="Separated by Comma"
+                    required>
             </div>
 
             <button type="submit" class="btn btn-primary m-2">Submit</button>
@@ -28,7 +30,7 @@
         {% if data %}
         <a href="{% url 'displayGraph' data.snum %}" class="btn btn-primary m-2">Visualize</a>
         {% endif %}
-        
+
     </div>
 
     <div class="col-md-12 d-flex justify-content-center">
@@ -37,9 +39,11 @@
     </div>
 
     <div class="m-3">
-        <label class="form-check-label" for="gridRadios3"> Choose Image </label>
-        <input type="file" name="stdimage" accept="image/*">
+        <label class="form-check-label" for="fileUp">Choose File</label>
+        <input type="file" name="fileUp"
+            accept=".csv, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
     </div>
+
 
 </div>
 {% endblock %}
