Removed Search from contacts.

--- a/Vyomika/templates/Home/contact.html
+++ b/Vyomika/templates/Home/contact.html
@@ -559,6 +559,9 @@ transform: translateY(-0.15em);
 			</g>
 		</g>
 	</svg>
+	{% block search_button_base %}
+	
+	{% endblock %}
 
 
 	<form action='#' method='POST'> {% csrf_token %}
