--- a/Vyomika/templates/Student/bbastudents.html
+++ b/Vyomika/templates/Student/bbastudents.html
@@ -2,6 +2,9 @@
 
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
+{% block search_button_base %}
+
+
 <a href="addStudent/"><button type="button" class="btn btn-outline-dark m-3">Add Students</button></a>
 
 <table class="table align-middle mb-0 bg-white">
