Added a Staff Mgmt Page.

--- a/Vyomika/templates/Student/home.html
+++ b/Vyomika/templates/Student/home.html
@@ -29,7 +29,7 @@
                         aspects of employee information within an organization. It provides a centralized platform for
                         administrators and HR personnel to manage employee data, track attendance, assign tasks, and
                         streamline administrative tasks related to staff management.</p>
-                    <a href="/blog/post-2" class="btn btn-primary">Analyze</a>
+                    <a href="staff/" class="btn btn-primary">Analyze</a>
                 </div>
             </div>
         </div>
