--- a/Vyomika/templates/Student/staffmgmt.html
+++ b/Vyomika/templates/Student/staffmgmt.html
@@ -3,7 +3,7 @@
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
 
-<a href="addStudent/"><button type="button" class="btn btn-outline-dark m-3">Add Students</button></a>
+<a href="addStaff/"><button type="button" class="btn btn-outline-dark m-3">Add Staff</button></a>
 
 <table class="table align-middle mb-0 bg-white">
     <thead class="bg-light">
