--- a/Vyomika/templates/Student/addstaff.html
+++ b/Vyomika/templates/Student/addstaff.html
@@ -8,29 +8,34 @@
     {% csrf_token %}
     <div class="col">
         <label for="name">Full Name</label>
-        <input type="text" class="form-control" name="stdname" placeholder="Full name">
+        <input type="text" class="form-control" name="stfname" placeholder="Full name">
     </div>
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" name="stdemail" placeholder="Email">
+            <input type="email" class="form-control" id="inputEmail4" name="stfemail" placeholder="Email">
         </div>
     </div>
     <div class="form-group">
         <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" name="stdadd" placeholder="1234 Main St">
+        <input type="text" class="form-control" id="inputAddress" name="stfadd" placeholder="1234 Main St">
     </div>
     <div class="form-group">
         <label for="phone">Phone</label>
-        <input type="text" class="form-control" id="inputAddress2" name="stdphone" placeholder="Phone number">
+        <input type="text" class="form-control" id="inputAddress2" name="stfphone" placeholder="Phone number">
     </div>
     <div class="form-row">
         <div class="form-group col-md-4">
             <label for="faculty">Faculty</label>
-            <select id="inputState" class="form-control" name="stdfaculty">
+            <select id="inputState" class="form-control" name="stfrole">
                 <option selected>...</option>
-                <option>BSIT</option>
-                <option>BBA</option>
+                <option>Director</option>
+                <option>Principle</option>
+                <option>Co-ordinator</option>
+                <option>Professor</option>
+                <option>Accountant</option>
+                <option>Receptionist</option>
+                <option>Helper</option>
             </select>
         </div>
     </div>
@@ -39,19 +44,19 @@
             <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
             <div class="col-sm-10">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="stdgender" id="gridRadios1" value="Male">
+                    <input class="form-check-input" type="radio" name="stfgender" id="gridRadios1" value="Male">
                     <label class="form-check-label" for="gridRadios1">
                         Male
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="stdgender" id="gridRadios2" value="Female">
+                    <input class="form-check-input" type="radio" name="stfgender" id="gridRadios2" value="Female">
                     <label class="form-check-label" for="gridRadios2">
                         Female
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="stdgender" id="gridRadios3" value="Others">
+                    <input class="form-check-input" type="radio" name="stfgender" id="gridRadios3" value="Others">
                     <label class="form-check-label" for="gridRadios3">
                         Others
                     </label>
@@ -61,7 +66,7 @@
     </fieldset>
     <div class="m-3">
         <label class="form-check-label" for="gridRadios3"> Choose Image </label>
-        <input type="file" name="stdimage" accept="image/*">
+        <input type="file" name="stfimage" accept="image/*">
     </div>
     <button type="submit" class="btn btn-primary" >Add</button>
 </form>
