--- a/Vyomika/templates/Student/staffmgmt.html
+++ b/Vyomika/templates/Student/staffmgmt.html
@@ -16,26 +16,26 @@
         </tr>
     </thead>
     <tbody>
-        {% for std in student %}
+        {% for stf in staff %}
         <tr>
             <td>
                 <div class="d-flex align-items-center">
-                    <img src="/media/{{std.stdimage}}" alt="" style="width: 120px; height: 120px"
+                    <img src="/media/{{stf.stfimage}}" alt="" style="width: 120px; height: 120px"
                         class="rounded-circle" />
                     <div class="ms-3">
-                        <p class="fw-bold mb-1">{{std.stdname}}</p>
-                        <p class="text-muted mb-0">{{std.stdemail}}</p>
+                        <p class="fw-bold mb-1">{{stf.stfname}}</p>
+                        <p class="text-muted mb-0">{{stf.stfemail}}</p>
                     </div>
                 </div>
             </td>
             <td>
-                <p class="fw-normal mb-1">{{std.stdadd}}</p>
+                <p class="fw-normal mb-1">{{stf.stfadd}}</p>
             </td>
-            <td>{{std.stdphone}}</td>
-            <td>{{std.stdfaculty}}</td>
-            <td>{{std.stdgender}}</td>
+            <td>{{stf.stfphone}}</td>
+            <td>{{stf.stfrole}}</td>
+            <td>{{stf.stfgender}}</td>
             <td>
-                <form action="{% url 'delete_student' std.std_id %}" method="POST">
+                <form action="{% url 'delete_staff' stf.stf_id %}" method="POST">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
