--- a/Vyomika/templates/Student/staffmgmt.html
+++ b/Vyomika/templates/Student/staffmgmt.html
@@ -3,6 +3,22 @@
 {% block title %} Vyomika {% endblock title %}
 {% block body %}
 
+
+{% block search %}
+<div class="col-md-12 my-2 d-flex justify-content-end">
+    <form action="searchstf/" method="get" class="form" style="position: initial;">
+        <input class="mr-sm-3" type="search" placeholder="Search" name='query' id="query" aria-label="Search"
+            style="border-radius: 5px; height: 2.1em;">
+        <button class="btn btn-outline-none my-2 my-sm-0" id="search_button_base" type="submit"><svg
+                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                viewBox="0 0 16 16">
+                <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+            </svg></button>
+    </form>
+</div>
+{% endblock %}
+
 <a href="addStaff/"><button type="button" class="btn btn-outline-dark m-3">Add Staff</button></a>
 
 <table class="table align-middle mb-0 bg-white">
@@ -11,7 +27,7 @@
             <th>Name</th>
             <th>Address</th>
             <th>Phone</th>
-            <th>Faculty</th>
+            <th>Role</th>
             <th>Gender</th>
         </tr>
     </thead>
@@ -41,6 +57,7 @@
                 </form>
             </td>
         </tr>
+
         {% endfor %}
     </tbody>
 </table>
