Made search function for staffs.

--- a/Vyomika/templates/Student/search.html
+++ b/Vyomika/templates/Student/search.html
@@ -43,6 +43,6 @@
     </tbody>
 </table>
 
-<a href='/management/faculty/<str:stdfaculty/>'><button class="m-3 btn btn-info">Go Back</button></a>
+<a href='/management/faculty/'><button class="m-3 btn btn-info">Go Back</button></a>
 
 {% endblock %}
