--- a/Vyomika/templates/accounts/signup.html
+++ b/Vyomika/templates/accounts/signup.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html' %}
 
-<head>
-    <title>Signup Form</title>
+{% block title %} Signup {% endblock title %}
+{% block style %}
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,12 +57,14 @@
             cursor: pointer;
         }
     </style>
+{% endblock %}
 </head>
 
+{% block body %}
 <body>
     <div class="container">
         <h2>Signup Form</h2>
-        <form action="/handlesignup" method="POST" enctype="multipart/form-data">
+        <form action="/login/handlesignup" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
             <div class="form-group">
                 <label for="email">Email:</label>
@@ -74,14 +75,6 @@
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="first_name">First Name:</label>
-                <input type="text" id="first_name" name="first_name" required>
-            </div>
-            <div class="form-group">
-                <label for="last_name">Last Name:</label>
-                <input type="text" id="last_name" name="last_name" required>
-            </div>
-            <div class="form-group">
                 <label for="password">Create Password:</label>
                 <input type="password" id="password" name="password1" required>
             </div>
@@ -90,35 +83,11 @@
                 <input type="password" id="password" name="password2" required>
             </div>
             <div class="form-group">
-                <label for="profile_pic">Profile Picture:</label>
-                <input type="file" id="profile_pic" name="profile_pic">
-            </div>
-            <div class="form-group">
-                <label>Gender:</label>
-                <input type="radio" id="male" name="gender" value="male" required>
-                <label for="male" class="radio-label">Male</label>
-                <input type="radio" id="female" name="gender" value="female" required>
-                <label for="female" class="radio-label">Female</label>
-                <input type="radio" id="others" name="gender" value="others" required>
-                <label for="female" class="radio-label">Others</label>
-            </div>
-            <div class="form-group">
-                <label for="dob">Date of Birth:</label>
-                <input type="date" id="dob" name="dob" required>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="text" id="phone" name="phone">
-            </div>
-            <div class="form-group">
-                <label for="address">Address:</label>
-                <input type="text" id="address" name="address">
-            </div>
-            <div class="form-group">
-                <input type="submit" class="btn" value="Signup">
+                <input type="submit" class="btn btn-success" value="Signup">
             </div>
         </form>
     </div>
 </body>
+{% endblock %}
 
 </html>
