--- a/Vyomika/templates/Home/index.html
+++ b/Vyomika/templates/Home/index.html
@@ -108,54 +108,8 @@ max-width: 100%;
         </p>
         <!-- Button trigger modal -->
 
-        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Get
-          Started</button>
-
-        <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-          aria-labelledby="staticBackdropLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Welcome to Vyomika</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <form action='#' method='POST'> {% csrf_token %}
-                  <h1 class="title text-center mb-4">Sign Up</h1>
-                  <div class="form-group position-relative my-2">
-                    <label for="formName" class="d-block">
-                      <i class="icon" data-feather="user"></i>
-                    </label>
-                    <input type="text" id="formName" class="form-control form-control-lg thick" id="name" name="name"
-                      placeholder="User Name" required>
-                  </div>
-
-                  <!-- E-mail -->
-                  <div class="form-group position-relative my-2">
-                    <label for="formEmail" class="d-block">
-                      <i class="icon" data-feather="mail"></i>
-                    </label>
-                    <input type="email" id="formEmail" class="form-control form-control-lg thick" id="email"
-                      name="email" placeholder="E-mail" required>
-                  </div>
-                  <div class="form-group position-relative my-2">
-                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Choose Your Password"
-                      required>
-                  </div>
-                  <div class="form-group position-relative my-2">
-                    <input type="password" class="form-control" id="pass2" name="pass2"
-                      placeholder="Enter your password again" required>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-secondary">Submit</button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <a href = "/login/signup"><button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Get
+          Started</button></a>
       </div>
       <div class="image">
         <img src="{% static 'logo1.png' %}" alt='Logo' style="height:fit-content;">
