--- a/Vyomika/templates/accounts/login.html
+++ b/Vyomika/templates/accounts/login.html
@@ -68,7 +68,7 @@
       <input type="text" id="email" name="email" required>
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
-      <button type="submit" style='margin-bottom:1em'>Login</button>
+      <button type="submit" style='margin:1em 0'>Login</button>
     </form>
     <a href="signup"><button type="submit">Signup</button></a>
   </div>
