--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} {% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/hello.png">
     <style>
         .btn.btn-primary {
             font-family: 'Quicksand', sans-serif;
