--- a/Vyomika/templates/base.html
+++ b/Vyomika/templates/base.html
@@ -182,9 +182,11 @@
                     <li class="nav-item">
                         <hr class="dropdown-divider">
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/login/handlelogout">Sign Out</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
